<resources>
    <string name="app_name">江湖外卖V3</string>
    <string name="首页">首页</string>
    <string name="购物车">购物车</string>
    <string name="订单">订单</string>
    <string name="我的">我的</string>
    <string name="正在定位">正在定位...</string>
    <string name="智能排序">智能排序</string>
    <string name="距离最近">距离最近</string>
    <string name="销量最高">销量最高</string>
    <string name="评分最高">评分最高</string>
    <string name="起送价最低">起送价最低</string>
    <string name="最早送达">最早送达</string>
    <string name="拍照换头像">拍照换头像</string>
    <string name="从相册上传头像">从相册上传头像</string>
    <string name="我的收货地址">我的收货地址</string>
    <string name="我的优惠券">我的优惠券</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击"设置"-"权限"-打开所需权限。</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="搜索失败">搜索失败</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="permission_request_denied">需要相应的权限</string>
    <string name="再按一次退出程序">再按一次退出程序</string>
    <string name="营业中">营业中</string>
    <string name="打烊">打烊了</string>
    <string name="分">分</string>
    <string name="单">单</string>
    <string name="分钟">分钟</string>
    <string name="月售">月售</string>
    <string name="no_more">到底了</string>
    <string name="已售">已售 %1$s 份</string>
    <string name="赞">%1$s 人赞</string>
    <string name="收货人info">收货人：%1$s  %2$s</string>
    <string name="收货地址info">收货地址：%1$s</string>
    <string name="商品个数">共%1$s件商品</string>
    <string name="可选规格">可选规格</string>
    <string name="配送服务">配送服务：%1$s</string>
    <string name="商家配送">商家配送</string>
    <string name="平台配送">平台配送</string>
    <string name="订单号info">订单号：%1$s</string>
    <string name="下单时间info">下单时间：%1$s</string>
    <string name="骑手info">骑手：%1$s</string>
    <string name="总计￥">总计￥ %1$s</string>
    <string name="送达时间info">送达时间：%1$s</string>
    <string name="尽快送达">尽快送达</string>
    <string name="选择红包">%1$s元红包满(%2$s元可用)</string>
    <string name="选择优惠券">%1$s元优惠券满(%2$s元可用)</string>
    <string name="不使用红包">不使用红包</string>
    <string name="不使用优惠券">不使用优惠券</string>
    <string name="催单成功">催单成功！</string>
    <string name="获取位置失败">获取位置失败</string>
    <string name="接口异常">接口异常,请稍后再试</string>
    <string name="订单编号">订单编号</string>
    <string name="应支付金额">应支付金额</string>
    <string name="餐盒打包费">餐盒打包费</string>
    <string name="男">男</string>
    <string name="女">女</string>
    <string name="请输入地址">请输入地址</string>
    <string name="搜索">搜索</string>
    <string name="当前地址">当前地址</string>
    <string name="重新定位">重新定位</string>
    <string name="附近地址">附近地址</string>
    <string name="没有搜索到相关地址">没有搜索到相关地址</string>
    <string name="获取不到相关地址信息">获取不到相关地址信息</string>
    <string name="我的余额">我的余额</string>
    <string name="余额充值">余额充值</string>
    <string name="送">送</string>
    <string name="红包">红包</string>
    <string name="充值">充值</string>
    <string name="支付宝">支付宝</string>
    <string name="微信">微信</string>
    <string name="快捷登录">快捷登录</string>
    <string name="手机号为空">手机号为空！</string>
    <string name="手机号不能为空">手机号不能为空！</string>
    <string name="验证码不能为空">验证码不能为空</string>
    <string name="网络出现了小问题">网络出现了小问题！</string>
    <string name="手机格式有误">手机格式有误！</string>
    <string name="注册成功">注册成功</string>
    <string name="微信绑定">微信绑定</string>
    <string name="绑定">绑定</string>
    <string name="登录">登录</string>
    <string name="分享">分享</string>
    <string name="收藏">收藏</string>
    <string name="店内搜索">店内搜索</string>
    <string name="分享店铺">分享店铺</string>
    <string name="收藏店铺">收藏店铺</string>
    <string name="满可用">满%1$s元可用</string>
    <string name="商家好评率">商家好评率%1$s</string>
    <string name="查看用户协议">查看用户协议</string>
    <string name="请输入位置名称">请输入位置名称</string>
    <string name="已售罄">已售罄</string>
    <string name="订单详情">订单详情</string>
    <string name="骑手">骑手:</string>
    <string name="骑手位置">骑手位置</string>
    <string name="订单号">订单号:</string>
    <string name="在线支付_方式">支付方式：在线支付</string>
    <string name="货到付款_方式">支付方式：货到付款</string>
    <string name="下单时间">下单时间：</string>
    <string name="配送员位置">配送员位置</string>
    <string name="团购">团购</string>
    <string name="我的消息">我的消息</string>
    <string name="我的收藏">我的收藏</string>
    <string name="数据解析异常">数据解析异常,请稍后再试!</string>
    <string name="人均消费最低">人均消费最低</string>
    <string name="随时退">随时退</string>
    <string name="用户评价">用户评价</string>
    <string name="图文详情">图文详情</string>
    <string name="数量">数量</string>
    <string name="小计">小计</string>
    <string name="订单总价">订单总价</string>
    <string name="您绑定的手机号">您绑定的手机号</string>
    <string name="确认订单">确认订单</string>
    <string name="￥">￥%1$s</string>
    <string name="￥2">￥</string>
    <string name="提交订单">提交订单</string>
    <string name="询问服务员后输入">询问服务员后输入</string>
    <string name="输入不享受优惠金额">输入不享受优惠金额(如酒水/套餐)</string>
    <string name="不享受优惠金额">不享受优惠金额：</string>
    <string name="实付金额">实付金额</string>
    <string name="优惠买单">优惠买单</string>
    <string name="优惠说明">优惠说明</string>
    <string name="手机号码不能为空">手机号码不能为空！</string>
    <string name="新密码不能为空">新密码不能为空！</string>
    <string name="重复密码不能为空">重复密码不能为空！</string>
    <string name="密码不一致">密码不一致！</string>
    <string name="支付宝支付">支付宝支付</string>
    <string name="支付页面">支付页面</string>
    <string name="商家相册">商家相册</string>
    <string name="消费">消费</string>
    <string name="实付">实付</string>
    <string name="微信支付">微信支付</string>
    <string name="当前已是最新本版">当前已是最新本版</string>
    <string name="mall_搜索商家">搜索商家、 商品</string>
    <string name="mall_分类">分类</string>
    <string name="mall_分享">分享</string>
    <string name="mall_综合">综合</string>
    <string name="mall_价格">价格</string>
    <string name="mall_综合排序">综合排序</string>
    <string name="mall_销量">销量</string>
    <string name="mall_新品">新品</string>
    <string name="mall_关注度">关注度：</string>
    <string name="mall_进店">进店</string>
    <string name="mall_搜索商品">搜索商品</string>
    <string name="mall_关注">关注</string>
    <string name="mall_已关注">已关注</string>
    <string name="待付款">待付款</string>
    <string name="待发货">待发货</string>
    <string name="待收货">待收货</string>
    <string name="待评价">待评价</string>
    <string name="待退款">待退款</string>
    <string name="退款售后">退款/售后</string>
    <string name="密码长度不能少于6位">密码长度不能少于6位！</string>
    <string name="密码不能为空">密码不能为空！</string>
    <string name="其他商品">其他%1$s个商品</string>
    <string name="人均">人均:￥%1$s</string>
    <string name="mall_商品">商品</string>
    <string name="mall_共件商品">共%s件商品</string>
    <string name="mall_商家">商家</string>
    <string name="mall_已售">已售</string>
    <string name="mall_已售f">已售%1$s</string>
    <string name="mall_人">%1$s人</string>
    <string name="mall_请输入">请输入搜索内容！</string>
    <string name="mall_程序出错">很抱歉，程序出错了！</string>
    <string name="mall_没有更多数据了">没有更多数据了！</string>
    <string name="mall_朋友圈">朋友圈</string>
    <string name="mall_空间">空间</string>
    <string name="mall_店主推荐">店主推荐</string>
    <string name="mall_库存">库存%s件</string>
    <string name="mall_请选择规格">请选择规格</string>
    <string name="mall_数量">数量</string>
    <string name="mall_确定">确定</string>
    <string name="mall_截止">截止：</string>
    <string name="mall_立即领取">立即领取</string>
    <string name="mall_联系商家">联系商家</string>
    <string name="mall_店铺">店铺</string>
    <string name="mall_收藏">收藏</string>
    <string name="mall_加入购物车">加入购物车</string>
    <string name="mall_立即购买">立即购买</string>
    <string name="mall_运费">运费：%s</string>
    <string name="mall_剩余">剩余：%s</string>
    <string name="mall_销量format">销量：%s</string>
    <string name="mall_优惠">优惠</string>
    <string name="mall_收货人f">收货人：%s</string>
    <string name="mall_收获地址">收货地址：%s</string>
    <string name="mall_满意">满意</string>
    <string name="mall_不满意">不满意</string>
    <string name="mall_规格">规格：</string>
    <string name="mall_规格f">规格：%s</string>
    <string name="mall_领取优惠券">领取优惠券</string>
    <string name="mall_选择规格">选择规格</string>
    <string name="mall_商品详情">商品详情</string>
    <string name="mall_库存不够">库存不够</string>
    <string name="mall_请选择需要购买的规格">请选择需要购买的规格</string>
    <string name="mall_商品总额">商品总额</string>
    <string name="mall_运费2">运费</string>
    <string name="mall_实付款">实付款（含运费）</string>
    <string name="mall_我的评价">我的评价</string>
    <string name="mall_商品评价">商品评价</string>
    <string name="mall_活动商家">活动商家</string>
    <string name="mall_活动商品">活动商品</string>
    <string name="mall_交易成功">交易成功</string>
    <string name="mall_收货人">收货人：</string>
    <string name="mall_收货地址">收货地址：%s</string>
    <string name="mall_配送方式">配送方式</string>
    <string name="mall_查看物流">查看物流</string>
    <string name="mall_确认收货">确认收货</string>
    <string name="mall_去评价">去评价</string>
    <string name="mall_退款编号">退款编号：</string>
    <string name="mall_退款方式">退款范式：</string>
    <string name="mall_退款金额">退款金额：</string>
    <string name="mall_退款说明">退款说明：</string>
    <string name="mall_退款说明2">退款说明</string>
    <string name="mall_手机号码">手机号码：</string>
    <string name="mall_提交申请">提交申请</string>
    <string name="mall_物流状态">物流状态</string>
    <string name="mall_承运公司">承运公司：</string>
    <string name="mall_运单编号">运单编号：</string>
    <string name="mall_客服电话">客服电话：</string>
    <string name="mall_退款手机">退款手机：</string>
    <string name="mall_申请时间">申请时间：</string>
    <string name="mall_查看详情">查看详情</string>
    <string name="mall_申请维权">申请维权</string>
    <string name="mall_等待商家处理退款申请">等待商家处理退款申请</string>
    <string name="mall_如商家同意申请">如商家同意：申请将达成并原路退款</string>
    <string name="mall_如商家拒绝">如商家拒绝：您可以重新修改退款申请或者申请维权</string>
    <string name="mall_如商家未处理">如商家未处理：超过5天则申请达成并自动为您退款</string>
    <string name="mall_快递免运费">快递免运费</string>
    <string name="mall_推荐">推荐</string>
    <string name="mall_更多">更多</string>
    <string name="mall_¥">¥</string>
    <string name="mall_¥f">¥%s</string>
    <string name="mall_热销商品排行">热销商品排行</string>
    <string name="mall_TOP店铺排行">TOP店铺排行</string>
    <string name="mall_取消">取消</string>
    <string name="mall_智能">智能</string>
    <string name="mall_热销">热销</string>
    <string name="mall_上新">上新</string>
    <string name="mall_优惠券">优惠券</string>
    <string name="mall_RMB">RMB</string>
    <string name="mall_满使用">满%d元使用</string>
    <string name="mall_点击领取">点击领取</string>
    <string name="mall_全部">全部</string>
    <string name="mall_全部f">全部(%s)</string>
    <string name="mall_满意f">满意(%s)</string>
    <string name="mall_不满意f">不满意(%s)</string>
    <string name="mall_有图f">有图(%s)</string>
    <string name="mall_店铺不存在">店铺不存在</string>
    <string name="mall_使用优惠券">使用优惠券</string>
    <string name="mall_暂无优惠券">暂无优惠券</string>
    <string name="mall_添加成功">添加成功</string>
    <string name="mall_没有商家联系方式">没有商家联系方式</string>
    <string name="mall_智能排序">智能排序</string>
    <string name="mall_新店开业">新店开业</string>
    <string name="mall_关注最多">关注最多</string>
    <string name="mall_全部商品">全部商品</string>
    <string name="mall_店铺首页">店铺首页</string>
    <string name="mall_店铺商品分类">店铺商品分类</string>
    <string name="物品类型">物品类型：</string>
    <string name="物品重量">物品重量：</string>
    <string name="物品价值2">物品价值：</string>
    <string name="地址簿">地址簿</string>
    <string name="取货时间">取货时间</string>
    <string name="立即取件">立即取件</string>
    <string name="跑腿费">跑腿费</string>
    <string name="同意并接受">同意并接受</string>
    <string name="需支付">需支付：</string>
    <string name="不含商品费用">不含商品费用</string>
    <string name="请填写收货人信息必填">请填写收货人信息（必填）</string>
    <string name="加小费可以更快抢单哦">加小费可以更快抢单哦</string>
    <string name="暂无可用红包">暂无可用红包</string>
    <string name="楼号">楼号-门牌号，例如：1号楼1单元1102室</string>
    <string name="立即下单">立即下单</string>
    <string name="购买地址">购买地址：</string>
    <string name="详细地址">详细地址：</string>
    <string name="赏赐小费">赏赐小费</string>
    <string name="请选择地址">请选择地址</string>
    <string name="配送信息">配送信息</string>
    <string name="送达时间">送达时间</string>
    <string name="配送距离">配送距离</string>
    <string name="配送骑手">配送骑手</string>
</resources>