<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mall_color_eaeff3"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.jhcms.run.activity.BuyAddressSetActivity">
    <include layout="@layout/common_title"/>
    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12">
        <TextView
            style="@style/text_ww_14_333333"
            android:text="@string/购买地址"
            />
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/mall_black"
            android:textSize="@dimen/sp_13"
            android:textColorHint="@color/mall_color_999999"
            android:hint="@string/请选择地址"
            />
        <ImageView
            android:layout_width="@dimen/dp_7"
            android:layout_height="@dimen/dp_12"
            android:src="@mipmap/icon_arrow_right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12">
        <TextView
            style="@style/text_ww_14_333333"
            android:text="@string/详细地址"
            />
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mall_black"
            android:textSize="@dimen/sp_13"
            android:textColorHint="@color/mall_color_999999"
            android:hint="@string/楼号"
            android:background="@null"
            android:maxLines="1"
            />
    </LinearLayout>
    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/bg_mall_btn"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/mall_确定"
        />
</LinearLayout>
