<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_distribution"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_12"
        android:text="@string/配送信息" />


    <LinearLayout
        android:id="@+id/ll_delivery_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/送达时间"
            android:textColor="@color/third_txt_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_20"
            android:text="立即送达"
            android:textColor="@color/title_color"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/配送距离"
            android:textColor="@color/third_txt_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_20"
            android:text="5km"
            android:textColor="@color/title_color"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:text="@string/配送骑手"
            android:textColor="@color/third_txt_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_rider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_20"
            android:text="张华"
            android:textColor="@color/title_color"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_rider_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="13515608638"
            android:textColor="#20ad20"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

</LinearLayout>